--- a/meu-portfolio.css
+++ b/meu-portfolio.css
@@ -32,7 +32,7 @@ header {
     display: flex;
     justify-content: space-between;
     width: 400px;
-    margin-right: 30px;
+    margin: 0 30px 0 1000px;
     align-items: center;
     position: sticky;
     font-size: 18px;
@@ -247,6 +247,10 @@ h1.habilidades {
     header {
         width: 1000px;
     }
+
+    .sessoes{
+        margin: 0 0 0 500px;
+    }
 }
 
 @media (min-width:1200px) and (max-width: 1300px) {
@@ -254,12 +258,20 @@ h1.habilidades {
     header {
         width: 1200px;
     }
+
+    .sessoes{
+        margin: 0 0 0 600px ;
+    }
 }
 
 @media (min-width:1300px) and (max-width: 1500px) {
 
     header {
         width: 1300px;
+    }
+
+    .sessoes{
+        margin: 0 0 0 700px;
     }
 }
 
