--- a/meu-portfolio.css
+++ b/meu-portfolio.css
@@ -90,7 +90,13 @@ h3.apresentacao {
 .sobreMim {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: #9f654f;
+}
+
+.imgSobreMim{
+    width: 450px;
+    height: 450px;
 }
 
 .txtSobreMim {
@@ -275,6 +281,7 @@ h1.habilidades {
     .pagInicio {
         background: #512515;
         font-size: 10px;
+        padding-left: 20px;
     }
 
     .body {
@@ -302,7 +309,7 @@ h1.habilidades {
 
     .habilidades {
         display: block;
-        padding: 250px 0 270px 60px;
+        padding: 250px 0 270px 40px;
     }
 
     .habilidadeTXT {
@@ -327,6 +334,21 @@ h1.habilidades {
 
         .pagInicio{
             display: block;
+        }
+
+        .sobreMim{
+            display: block;
+        }
+
+        .imgSobreMim{
+            width: 300px;
+            height: 300px;
+            margin-bottom: 0px;
+        }
+
+        .txtSobreMim{
+            padding-top: 30px;
+            width: 300px;
         }
     }
 }
