--- a/meu-portfolio.css
+++ b/meu-portfolio.css
@@ -1,10 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
     color: white;
     scroll-behavior: smooth;
+}
+
+.projetoLandingPage{
+
+    width: 270px;
+    height: 260px;
+    cursor: pointer;
+    border-radius: 10px;
 }
 
 .span {
